--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,30 @@
 name: CI
 
 on: push
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
+  test:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
 
-      - name: Run a one-line script
-        run: echo "Hello, world!"
+      - name: Compile Module
+        run: mvn -pl test-compile standalone-metastore/ -am 
+        
+      - name: Run Test
+        run: mvn -pl standalone-metastore/ test -Dtest=org.apache.hadoop.hive.metastore.TestEmbeddedHiveMetaStore.testSimpleFunction
+        
+      - name: Run Test to reveal flaky Test
+        run: mvn -pl standalone-metastore/ edu.illinois:nondex-maven-plugin:1.1.2:nondex -Dtest=org.apache.hadoop.hive.metastore.TestEmbeddedHiveMetaStore.testSimpleFunction
+    
